--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,11 +1,12 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Others"
 permalink: /teaching/
 author_profile: true
 ---
 
 {% include base_path %}
+
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
